@@ -2,7 +2,7 @@ FROM python:3.10-slim
 
 # Install Java (required for PySpark) and unzip (for Kaggle datasets)
 RUN apt-get update && \
-    apt-get install -y default-jre unzip && \
+    apt-get install -y --no-install-recommends default-jre unzip && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -18,6 +18,7 @@ COPY . .
 # Set necessary environment variables
 ENV JAVA_HOME=/usr/lib/jvm/default-java
 ENV KAGGLE_CONFIG_DIR=/app
+ENV JDK_JAVA_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
 
 # Run the pipeline orchestrator
 CMD ["python", "main.py"]
